<resources>
    <string name="app_name">WeatherProject</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="alerts">Alerts</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="pressure">Pressure</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="temp">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahren">Fahrenheit</string>
    <string name="ms">meter/sec</string>
    <string name="mh">meter/hour</string>
    <string name="Searchlocation">Search location</string>
    <string name="google_maps_key">AIzaSyA_HbhVc7Qs5p9HSlHVR5d-B4M4MbDdmGU</string>
    <string name="search">Search for a location</string>
    <string name="confirm">Confirmation</string>
    <string name="conf">Are you sure you want to change your location?</string>
    <string name="favConf">Are you sure you want to add this location to your favorite locations?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty">You have no favorite locations</string>
    <string name="today">Today</string>
    <string name="day_forcast">5-Days Forecasts</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="dismiss">Dismiss</string>
</resources>