<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/homeFragment"
            android:title="@string/home"
            android:icon="@drawable/baseline_home_24"
           android:checkable="true"
            />
        <item
            android:id="@+id/favoriteFragment"
            android:title="@string/favorites"
            android:icon="@drawable/baseline_favorite_24"
            android:checkable="true"
            />
        <item
            android:id="@+id/alertsFragment"
            android:title="@string/alerts"
            android:icon="@drawable/baseline_add_alert_24"
            android:checkable="true"
            />
        <item
            android:id="@+id/settingsFragment"
            android:title="@string/settings"
            android:icon="@drawable/baseline_settings_24"
            android:checkable="true"
            />

    </group>
</menu>