<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.weatherproject.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.weatherproject.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/alertsFragment"
        android:name="com.example.weatherproject.AlertsFragment"
        android:label="@string/alerts"
        tools:layout="@layout/fragment_alerts" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.weatherproject.FavoriteFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorite" />
</navigation>