<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".view.favorite.FavoriteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:src="@drawable/weather" />
            <ProgressBar
                android:id="@+id/home_bar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/temperatureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="56sp"
                android:textColor="#FFFFFF"
                android:layout_marginTop="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/location"
                    />
                <TextView
                    android:id="@+id/cityNametxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/precipitationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/maxMinTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_marginTop="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/rounded_corners"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/today" />
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="370dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    />
                <ProgressBar
                    android:id="@+id/hourly_bar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hourly_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_corners"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/day_forcast"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="370dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    />
                <ProgressBar
                    android:id="@+id/daily_bar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/forcast_daily_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                >
                <LinearLayout
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/humidity"
                        android:layout_marginEnd="5dp"

                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/humidity"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        />
                    <TextView
                        android:id="@+id/humidityValuetxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_marginEnd="15dp"
                        android:layout_gravity="center_vertical"

                        />
                </LinearLayout>
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:dividerColor="@color/basic"
                    />
                <LinearLayout
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/air"
                        android:layout_marginEnd="5dp"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wind"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"

                        />
                    <TextView
                        android:id="@+id/windValuetxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="15dp"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:dividerColor="@color/basic"

                    />
                <LinearLayout
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/cloud"
                        android:layout_marginEnd="5dp"

                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cloud"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        />
                    <TextView
                        android:id="@+id/cloudValuetxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginEnd="15dp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        />
                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:dividerColor="@color/basic"

                    />
                <LinearLayout
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/compress"
                        android:layout_marginEnd="5dp"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pressure"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/pressureValuetxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginEnd="15dp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        />
                </LinearLayout>
            </LinearLayout>




        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
