<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".view.FavoriteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"

        >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >

                <!-- Weather icon and temperature -->
                <ImageView
                    android:layout_width="219dp"
                    android:layout_height="219dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/weather" />

                <!-- Temperature Text -->
                <TextView
                    android:id="@+id/temperatureText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="19°"
                    android:textSize="56sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="16dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/location"
                        />
                    <TextView
                        android:id="@+id/cityNametxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textColor="#FFFFFF"
                        />
                </LinearLayout>
                <!-- Precipitation and Temperature Range -->
                <TextView
                    android:id="@+id/precipitationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Precipitations"
                    android:textSize="20dp"
                    android:textColor="#FFFFFF"/>

                <TextView
                    android:id="@+id/maxMinTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Max: 24°  Min: 18°"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="4dp"/>

                <!-- House Image -->
                <ImageView
                    android:id="@+id/houseImage"
                    android:layout_width="340dp"
                    android:layout_height="200dp"
                    android:src="@drawable/house"
                android:layout_marginTop="16dp"
                android:contentDescription="House image"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <LinearLayout
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/humidity"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25dp"
                            android:text="@string/humidity"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            />
                        <TextView
                            android:id="@+id/humidityValuetxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25dp"
                            android:text="value"
                            android:textColor="@color/white"
                            android:layout_marginRight="15dp"
                            />
                    </LinearLayout>
                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        app:dividerColor="@color/basic"
                        />
                    <LinearLayout
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/air"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/wind"
                            android:textSize="25dp"
                            android:textColor="@color/white"
                            />
                        <TextView
                            android:id="@+id/windValuetxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25dp"

                            android:layout_marginRight="15dp"
                            android:textColor="@color/white"
                            />
                    </LinearLayout>
                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        app:dividerColor="@color/basic"

                        />
                    <LinearLayout
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/cloud"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/cloud"
                            android:textSize="25dp"
                            android:textColor="@color/white"
                            />
                        <TextView
                            android:id="@+id/cloudValuetxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25dp"
                            android:layout_marginRight="15dp"
                            android:textColor="@color/white"
                            />
                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        app:dividerColor="@color/basic"

                        />
                    <LinearLayout
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/compress"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pressure"
                            android:textColor="@color/white"
                            android:textSize="25dp" />
                        <TextView
                            android:id="@+id/pressureValuetxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25dp"
                            android:layout_marginRight="15dp"
                            android:textColor="@color/white"
                            />
                    </LinearLayout>
                </LinearLayout>




            </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
